# AI-Novel-Studio

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  README_EN.md  THIRD_PARTY_NOTICES.md  launch.bat  launch.ps1  pyproject.toml  setup.bat  启动程序.bat
.github/workflows/: ci.yml  windows-package.yml
docs/: AI_NOVEL_STUDIO_PRODUCT_OVERVIEW.md
docs/architecture/: 0001-clean-room-v3.md  0002-project-data-format.md  0003-phase-2-ui-boundaries.md  0004-unified-model-gateway.md  0005-memory-and-context-kernel.md  0006-prose-generation-pipeline.md  0007-agent-tool-loop.md  0008-project-guidance.md  0009-character-identity-resolution.md  0010-backend-phase-0-baseline.md  0011-subject-registry.md  0012-view-assertions.md  0013-schema-migration-modules.md  0014-context-hard-filter.md  0015-production-view-assertion-context.md  0016-task-relevance-reranking.md  0017-context-candidate-deduplication.md  0018-canon-conflict-projection.md  0019-dynamic-context-budget-guarantee.md  0020-hybrid-history-recall.md  0021-memory-embedding-cache-schema.md
docs/handoffs/: 2026-07-22-backend-refactor-handoff.md  BACKEND_WORKTREE_BOARD.md
docs/performance/: 2026-07-14-large-project-baseline.md
packaging/: AI-Novel-Studio.spec
scripts/: build_windows.ps1  capture_english_readme.py  privacy_scan.py  resolve_python.ps1  run_backend_baseline.py  verify_release.ps1
src/ai_novel_studio/: __main__.py  app.py
tests/: conftest.py  test_package_layout.py
tests/fixtures/: backend_baseline_v1.json  backend_baseline_v2.json  backend_baseline_v3.json  backend_baseline_v4.json  (+2 more)
(+286 files in other folders)
